plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = '17'
targetCompatibility = '17'

mainClassName = 'com.Loader'

repositories {
	mavenLocal()
	mavenCentral()
}

group 'darkan'
version '1.0-SNAPSHOT'

dependencies {

}

task buildJar(type: Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes(
                'Main-Class': 'com.Loader'
        )
    }
    classifier = 'all'
    baseName = 'MyJar'
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
            {
                exclude "META-INF/*.SF"
                exclude "META-INF/*.DSA"
                exclude "META-INF/*.RSA"
            }
    with jar
}